--- a/docker/Dockerfile-wp-php7.4
+++ b/docker/Dockerfile-wp-php7.4
@@ -17,7 +17,8 @@ RUN pecl install xdebug-3.1.2 && docker-php-ext-enable xdebug \
     && echo "xdebug.remote_host=docker.for.mac.localhost" >> ${PHP_INI_PATH} \
     && echo "xdebug.idekey=IDEA_DEBUG" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_autostart=1" >> ${PHP_INI_PATH} \
-    && echo "xdebug.remote_log=/tmp/xdebug.log" >> ${PHP_INI_PATH}
+    && echo "xdebug.remote_log=/tmp/xdebug.log" >> ${PHP_INI_PATH} \
+    && echo "memory_limit=-1" >> ${PHP_INI_PATH}
 
 EXPOSE 80
 EXPOSE 443
