--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^10",
         "brain/monkey": "2.*",
         "mockery/mockery": "1.7.x-dev",
-        "cyruscollier/wordpress-develop": "dev-master"
+        "php-stubs/wordpress-stubs": "^6.8"
     },
     "name": "bmlt-enabled/bmlt-workflow",
     "description": "dev dependencies for bmlt-workflow",
