updated wp installer

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,28 @@
     "require-dev": {
         "phpunit/phpunit": "^10",
         "brain/monkey": "2.*",
-        "mockery/mockery": "1.7.x-dev",
-        "php-stubs/wordpress-stubs": "^6.8"
+        "mockery/mockery": "1.7.x-dev"
     },
     "name": "bmlt-enabled/bmlt-workflow",
+    "type": "project",
+    "repositories": [
+        {
+            "type": "composer",
+            "url" : "https://wpackagist.org"
+        }
+    ],
     "description": "dev dependencies for bmlt-workflow",
-    "license": "MIT"
+    "license": "MIT",
+    "extra"       : {
+        "wordpress-install-dir": "vendor/wp"
+    },
+    "config": {
+        "vendor-dir": "vendor",
+        "allow-plugins": {
+            "johnpbloch/wordpress-core-installer": true
+        }
+    },
+    "require": {
+        "johnpbloch/wordpress": "^6.8"
+    }
 }
