--- a/docker/Dockerfile-wp-php8.3
+++ b/docker/Dockerfile-wp-php8.3
@@ -17,7 +17,9 @@ RUN pecl install xdebug && docker-php-ext-enable xdebug \
     && echo "xdebug.remote_host=docker.for.mac.localhost" >> ${PHP_INI_PATH} \
     && echo "xdebug.idekey=IDEA_DEBUG" >> ${PHP_INI_PATH} \
     && echo "xdebug.remote_autostart=1" >> ${PHP_INI_PATH} \
-    && echo "xdebug.remote_log=/tmp/xdebug.log" >> ${PHP_INI_PATH}
+    && echo "xdebug.remote_log=/tmp/xdebug.log" >> ${PHP_INI_PATH} \
+    && echo "memory_limit=-1" >> ${PHP_INI_PATH}
+
 RUN echo "Mutex posixsem" >> /etc/apache2/apache2.conf
 
 RUN curl -o /usr/local/bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
