Squashed commit of the following:
commit 0be640c88a254b697323a1b345b05e8585a4b924
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Sat Jul 19 09:48:30 2025 +1000

    Update lang files

commit acf28c987ccf97567453c3c36298a93fb4d4b35e
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Sat Jul 19 09:48:13 2025 +1000

    bump version

commit 20327b88f6d19c325db3dfa87500f425d7fc18a8
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Tue Jul 15 10:38:26 2025 +1000

    additional test cases

commit e90805baaaa2bb1ab8394866a1825dab681ee020
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 22:29:27 2025 +1000

    revert geocoding

commit 420618fa2d37a71319c2af9e9409fdcad203e7ff
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 22:15:19 2025 +1000

    update readme

commit d3d81bfa6ee96348357b2442b87aa7ed96ff1771
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 22:08:09 2025 +1000

    error handling

commit aea09862079dd05631d2dcdce2a4e771ef47eef6
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 21:59:51 2025 +1000

    lots of extra test cases

commit bfa97858417d38c9e5ba5581f7bfd3782b060631
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 21:07:32 2025 +1000

    update phpunit test cases

commit b0416431c99fbff8fd997c705ad70a69be00817a
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Mon Jul 14 09:51:10 2025 +1000

    add dbupgrade tests

commit 18ca08d15da62a1e8156cd60d355fb6bdcde9b93
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Sun Jul 13 22:18:26 2025 +1000

    update testcases

commit 672f58f21597f0585b260fad37cb756d3e029538
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Sun Jul 6 18:14:50 2025 +1000

    update test cases and locale

commit 7fbf41eb29727baff84374a5a7783720ae98b2ec
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Sat Jul 5 10:12:45 2025 +1000

    more db fixes

commit b9364d65f977c25cfd5a644ca15ad148b7414554
Author: Nigel <nigel.bmlt@gmail.com>
Date:   Fri Jul 4 12:33:04 2025 +1000

    update mockoon

commit 260763b46ac2afadf38b10711af

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,34 @@
 {
-    "autoload": {
-        "psr-4": {
-            "bmltwf\\": "src/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9",
-        "brain/monkey": "2.*",
-        "mockery/mockery": "1.7.x-dev",
-        "cyruscollier/wordpress-develop": "dev-master"
-    },
-    "name": "bmlt-enabled/bmlt-workflow",
-    "description": "dev dependencies for bmlt-workflow",
-    "license": "MIT"
+  "autoload": {
+    "psr-4": {
+      "bmltwf\\": "src/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10",
+    "brain/monkey": "2.*",
+    "mockery/mockery": "1.7.x-dev"
+  },
+  "name": "bmlt-enabled/bmlt-workflow",
+  "type": "project",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
+  "description": "dev dependencies for bmlt-workflow",
+  "license": "MIT",
+  "extra": {
+    "wordpress-install-dir": "vendor/wp"
+  },
+  "config": {
+    "vendor-dir": "vendor",
+    "allow-plugins": {
+      "johnpbloch/wordpress-core-installer": true
+    }
+  },
+  "require": {
+    "johnpbloch/wordpress": "^6.8"
+  }
 }
