--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
     },
     "exclude": [
         "node_modules",
-        "**/node_modules/*"
+        "**/node_modules/*",
+        "vendor"
     ]
 }
